# lt

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/iz/blackwater/lt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  altc.cpp
app/src/main/java/com/iz/blackwater/lt/: AppExecutors.java  JniHandler.java  LibtorrentService.java  MainActivity.java  MainViewModel.java  MyApplication.java  TorrentAdapter.java
app/src/main/java/com/iz/blackwater/lt/database/: AppDatabase.java  DateConverter.java  TorrentDao.java  TorrentEntry.java
app/src/main/res/layout/: activity_main.xml  my_text_view.xml  torrent_item.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/iz/blackwater/lt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
